tests/invalid/dict_popitem_bool_bool_unsupported/main.py
def run_case() -> None:
    d: dict[bool, bool] = {True: False}
    pair: tuple[bool, bool] = d.popitem()

if __name__ == "__main__":
    run_case()
